--- a/Bloggie/Areas/Admin/Views/Shared/_Admin.cshtml
+++ b/Bloggie/Areas/Admin/Views/Shared/_Admin.cshtml
@@ -88,7 +88,12 @@
                     </div>
                 </div>
             </li>
-
+            <li class="nav-item">
+                <a class="nav-link" asp-controller="Users" asp-action="Index">
+                    <i class="fas fa-fw fa-users"></i>
+                    <span>Users</span>
+                </a>
+            </li>
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
